# herdr-whichkey

./: .gitignore  Cargo.toml  LICENSE  README.md  herdr-plugin.toml  justfile
.github/workflows/: ci.yml  release.yml
docs/: design.md  spike-mouse.md  spike-popup-panes.md
scripts/: build.sh  open-menu.sh  pin-release.sh
src/: config.rs  context.rs  defaults.toml  dispatch.rs  keys.rs  layout.rs  main.rs  model.rs  theme.rs  trigger.rs  ui.rs
