[package]
name = "herdr-whichkey"
version = "0.2.2"
edition = "2021"
description = "blezz/which-key-style single-keystroke action menu for herdr"
license = "MIT"
repository = "https://github.com/Qu4tro/herdr-whichkey"

[dependencies]
anyhow = "1"
libc = "0.2"
signal-hook = "0.3"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
toml = { version = "0.8", features = ["preserve_order"] }
taffy = { version = "0.12.2", default-features = false, features = ["std", "taffy_tree", "grid"] }

[profile.release]
strip = true
lto = true
